--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -18,18 +18,18 @@
                   ng-disabled="loadingData"
                   ng-model="priorityFilter[0]">
             <option ng-repeat="(key, value) in priorityPerBlock"
-                    value="{{value}}">Block {{key}} ({{value / 1000}}k)</option>
+                    value="{{value}}">{{key}} ({{value / 1000}}k)</option>
           </select>
           <input type="text"
                  class="form-control"
                  style="width: 100%; border-radius: 0 0 0 5px; padding: 6px 10px;"
                  placeholder="min"
                  ng-change="applyFilterChanges()"
-                 ng-model-options="{ debounce: 1500 }"
+                 ng-model-options="{ debounce: 2500 }"
                  ng-disabled="loadingData"
                  ng-model="priorityFilter[0]">
           <div class="input-group-addon pl-1 pr-1">
-            &le; X &le;
+            &le; X &lt;
           </div>
           <select class="form-control"
                   style="width: 100%; border-radius: 0 5px 0 0; padding: 6px 4px;"
@@ -37,14 +37,14 @@
                   ng-disabled="loadingData" 
                   ng-model="priorityFilter[1]">
             <option ng-repeat="(key, value) in priorityPerBlock"
-                    value="{{value}}">Block {{key}} ({{value / 1000}}k)</option>
+                    value="{{value}}">{{key}} ({{value / 1000}}k)</option>
           </select>
           <input type="text"
                  class="form-control"
                  style="width: 100%; border-radius: 0 0 5px 0; padding: 6px 10px;"
                  placeholder="max"
                  ng-change="applyFilterChanges()"
-                 ng-model-options="{ debounce: 1500 }"
+                 ng-model-options="{ debounce: 2500 }"
                  ng-disabled="loadingData"
                  ng-model="priorityFilter[1]">
         </div>
