--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -63,5 +63,8 @@
         {{binEntry.niceDiff}}
       </div>
     </div>
+    <div style="text-align: right;">
+      <a style="cursor: pointer" ng-click="makeCSV(selectedBin)">Download as CSV</a>
+    </div>
   </div>
 </div>
